--- a/analysis_templates/01-single-group-integration-check-template.Rmd
+++ b/analysis_templates/01-single-group-integration-check-template.Rmd
@@ -111,6 +111,12 @@ sce_list <- purrr::map(all_sce_files, readr::read_rds) %>%
 ```
 
 
+```{r}
+# separate out merged sce for calculation of metrics and 
+#  convenient calculation of celltype information
+merged_sce <- sce_list$unintegrated
+```
+
 
 ```{r sce-checks}
 
@@ -154,6 +160,31 @@ if(!is.null(missing_umap)){
        Missing UMAP embeddings from SCE object. Make sure that UMAP embeddings are present and labeled with {missing_umap}.
       "))
 }
+
+# Check whether celltype information is available
+if(params$celltype_column %in% coldata_names){
+  # Set variable to TRUE
+  celltypes_present <- TRUE
+  
+  # Calculate percentage of cells for which this information is known
+  #  and print informative message
+  celltypes <- colData(merged_sce)[[params$celltype_column]]
+  percent_present <- round( sum(!(is.na(celltypes))) / length(celltypes), 3) * 100
+
+  if (percent_present < 100) {
+    glue::glue(
+      "Only {percent_present}% of cells in these libraries have cell type annotations. 
+Cells without annotations are not considered in calculations or visualizations that assess cell type mixing.
+      "
+    ) 
+  }
+} else {
+  celltypes_present <- FALSE
+  glue::glue(
+      "No celltype information found for this dataset. Cannot make UMAPs annotated with celltype or evaluate celltype mixing."
+  )
+}
+  
 ```
 
 ## UMAPs
@@ -178,7 +209,7 @@ batch_umaps <- names(sce_list) %>%
 
 ```{r celltype-umaps, fig.width=15, fig.height=20, warning=FALSE, message=FALSE}
 # only print out celltype UMAP plot if celltype information is provided
-if(params$celltype_column %in% coldata_names){
+if(celltypes_present){
  # create umap plots labeling by celltype column
   celltype_umaps <- names(sce_list) %>%
     purrr::map(~ plot_integration_umap(sce = sce_list[[.x]],
@@ -195,33 +226,10 @@ if(params$celltype_column %in% coldata_names){
                     legend.grob = celltype_legend, 
                     ncol = 2, 
                     nrow = 4) 
-} else {
-  glue::glue("
-    <div class=\"alert alert-warning\">
-    
-    No celltype information found for this dataset.
-    
-    </div>
-  ")
-}
+} 
 ```
 
 ## Integration metrics
-
-```{r}
-# separate out merged sce for calculation of metrics
-merged_sce <- sce_list$unintegrated
-```
-
-```{r}
-# Calculate the percentage of cells with cell type information for reporting
-percent_present <- round( sum(!(is.na(merged_sce$celltype))) / length(merged_sce$celltype), 3) * 100
-```
-
-
-**Caution:** Only `r percent_present`% of cells in these libraries have cell type annotations. 
-Cells without annotations are not considered in calculations or visualizations that assess cell type mixing.
-
 
 
 ### iLISI
@@ -260,24 +268,25 @@ The range of cLISI scores will be from 1 to the number of cell types, however we
 Therefore, we would expect that well integrated datasets to be close to 0 indicating low mixing of cell types, while poorly integrated datasets would be close to 1 indicating high mixing of cell types.
 
 
-```{r}
-# calculate clisi for unintegrated and integrated SCE separately
-clisi_unintegrated <- calculate_lisi(merged_sce,
-                                     batch_column = params$celltype,
-                                     unintegrated=TRUE)
-
-clisi_integrated_list <- integration_methods %>%
-  purrr::imap(~ calculate_lisi(integrated_sce = sce_list[[.x]],
-                                batch_column = params$celltype, 
-                                integration_method = .x))
-
-# create combined DF 
-clisi_df <- dplyr::bind_rows(clisi_unintegrated, clisi_integrated_list)
-```
-
-
-```{r fig.height=5, fig.width=5}
-plot_lisi(clisi_df, lisi_type = "cLISI")
+```{r, fig.height=5, fig.width=5}
+if (celltypes_present) {
+  
+  # calculate clisi for unintegrated and integrated SCE separately
+  clisi_unintegrated <- calculate_lisi(merged_sce,
+                                       batch_column = params$celltype,
+                                       unintegrated=TRUE)
+  
+  clisi_integrated_list <- integration_methods %>%
+    purrr::imap(~ calculate_lisi(integrated_sce = sce_list[[.x]],
+                                  batch_column = params$celltype, 
+                                  integration_method = .x))
+  
+  # create combined DF 
+  clisi_df <- dplyr::bind_rows(clisi_unintegrated, clisi_integrated_list)
+  
+  # Visualize cLISI results
+  plot_lisi(clisi_df, lisi_type = "cLISI")
+}
 ```
 
 
