Updating ari plotting code and notebook

--- a/analysis_templates/01-single-group-integration-check-template.Rmd
+++ b/analysis_templates/01-single-group-integration-check-template.Rmd
@@ -57,7 +57,7 @@ source(file.path(utils_dir, "integration-helpers.R"))
 source(file.path(utils_dir, "plotting-functions.R"))
 
 # source functions for calculating integration metrics
-source(file.path(utils_dir, "calculate-batch-ARI.R"))
+source(file.path(utils_dir, "calculate-ARI.R"))
 source(file.path(utils_dir, "calculate-batch-silhouette-width.R"))
 source(file.path(utils_dir, "calculate-LISI.R"))
 source(file.path(utils_dir, "run-metrics.R"))
@@ -271,7 +271,7 @@ The ARI between clustering results and batch assignments is then calculated and 
 We also calculated batch ARI across a range of k for k-means, the number of centers used for clustering.
 The plots show the batch ARI on the y-axis across each integration method and value of k used for k-means clustering.
 The first plot shows the integration method on the x-axis and plots are faceted by values of k, while the second plot shows each integration method as a separate plot and displays batch ARI across the range of k indicated on the x-axis.
-If datasets are well integrated we would anticipate the batch ARI to be close to 0 and the 1-batch ARI to be close to 1, indicating that batches are well integrated across clustering assignments and low concordance between clusters and batch assignment.
+If datasets are well integrated we would expect the batch ARI to be close to 0 and the 1-batch ARI to be close to 1, indicating that batches are well integrated across clustering assignments with low concordance between clusters and batch assignment.
 
 ```{r}
 # create k range needed for input to ARI function from params
@@ -283,37 +283,44 @@ if(params$ari_k_max < params$ari_k_min){
 
 ## get krange
 k_range <- seq(params$ari_k_min,
-              params$ari_k_max,
-              params$ari_k_increment)
+               params$ari_k_max,
+               params$ari_k_increment)
 ```
+
+```{r, warning=FALSE}
+# Calculate and visualize batch ARI
+batch_ari <- run_ari(sce_list, params$batch_column, k_range, params$seed)
+```
+
+```{r}
+# Visualize results, faceted across k
+plot(batch_ari$ari_plot_k)
+
+# Visualize results, faceted across integration_method
+plot(batch_ari$ari_plot_integration_method)
+```
+
+
+### Cell type ARI
+
+The below plots look at the cell type adjusted rand index (ARI) for each integration method.
+The procedure for this calculation matches that of batch ARI, except cell type labels are used as group assignments rather than batch assignments.
+The plots show the cell type ARI on the y-axis across each integration method and value of k used for k-means clustering.
+The first plot shows the integration method on the x-axis and plots are faceted by values of k, while the second plot shows each integration method as a separate plot and displays cell type ARI across the range of k indicated on the x-axis.
+If datasets are well integrated we would expect the cell type ARI to be close to 1 and the 1-batch ARI to be close to 0, indicating that cell types are well partitioned among clustering assignments with high concordance between clusters and cell type.
 
 
 ```{r, warning=FALSE}
-# calculate batch ARI for unintegrated and integrated SCE separately
-batch_ari_unintegrated <- calculate_batch_ari(sce_list$unintegrated,
-                                              seed = params$seed,
-                                              k_range = k_range,
-                                              num_pcs = params$num_pcs,
-                                              unintegrated=TRUE)
-
-batch_ari_integrated_list <- integration_methods %>%
-  purrr::imap(~ calculate_batch_ari(integrated_sce = sce_list[[.x]],
-                                    seed = params$seed,
-                                    k_range = k_range,
-                                    num_pcs = params$num_pcs,
-                                    integration_method = .x))
-
-# create combined DF
-batch_ari_df <- dplyr::bind_rows(batch_ari_unintegrated, batch_ari_integrated_list)
+# Calculate cell type ARI, using previously-defined k_range
+celltype_ari <- run_ari(sce_list, params$celltype_column, k_range, params$seed)
 ```
 
 ```{r}
-plot_batch_ari(batch_ari_df,
-               facet_group = "k")
-```
-```{r}
-plot_batch_ari(batch_ari_df,
-               facet_group = "integration_method")
+# Visualize results, faceted across k
+plot(celltype_ari$ari_plot_k)
+
+# Visualize results, faceted across integration_method
+plot(celltype_ari$ari_plot_integration_method)
 ```
 
 
