--- a/analysis_templates/01-single-group-integration-check-template.Rmd
+++ b/analysis_templates/01-single-group-integration-check-template.Rmd
@@ -14,7 +14,7 @@ params:
   k0_fraction_max: 0.25
   k0_fraction_increment: 0.05
   seed: 2022
-  asw_separate_cell_types: FALSE
+  asw_separate_celltypes: FALSE
   date: !r Sys.Date()
 
 title: "`r glue::glue('Integration evaluation for {params$group_name}')`"
@@ -73,9 +73,9 @@ knitr::knit_hooks$set(
 )
 
 # Ensure logical
-asw_separate_cell_types <- as.logical(toupper(params$asw_separate_cell_types))
-if (!(asw_separate_cell_types) %in% c(TRUE, FALSE)) {
-  stop("\nCould not read the asw_separate_cell_types` parameter.")
+asw_separate_celltypes <- as.logical(toupper(params$asw_separate_celltypes))
+if (!(asw_separate_celltypes) %in% c(TRUE, FALSE)) {
+  stop("\nCould not read the asw_separate_celltypes` parameter.")
 }
 ```
 
@@ -383,7 +383,7 @@ if (celltypes_present) {
   print(asw_results$asw_plot)
   
   # Separated, if specified in params
-  if (asw_separate_cell_types) {
+  if (asw_separate_celltypes) {
     asw_results <- run_asw(sce_list, params$celltype_column, params$seed, by_batch = TRUE, batch_label = "Cell type")
     print(asw_results$asw_plot)
   }
