--- a/analysis_templates/01-single-group-integration-check-template.Rmd
+++ b/analysis_templates/01-single-group-integration-check-template.Rmd
@@ -395,14 +395,11 @@ Results below (if present) are shown first for all cell types together, and then
 ```{r, fig.height=5, fig.width=7}
 if (celltypes_present) {
   # Not separated
-  asw_results <- run_asw(sce_list, params$celltype_column, params$seed, by_batch = FALSE)
+  asw_results <- run_asw(sce_list, params$celltype_column, params$seed, by_batch = FALSE) # Provide ALL celltypes here
   print(asw_results$asw_plot)
   
-  # Separated, if specified in params
-  if (asw_separate_celltypes) {
-    asw_results <- run_asw(sce_list, params$celltype_column, params$seed, by_batch = TRUE, batch_label = "Cell type")
-    print(asw_results$asw_plot)
-  }
+  asw_results <- run_asw(sce_list, "celltype_plot_names", params$seed, by_batch = TRUE, batch_label = "Cell type") # Provide only the subtypes to plot here
+  print(asw_results$asw_plot)
 } else {
   warning("No cell types are present, so cell type ASW will not be evaluated.")
 }
